test incrementRound_fromNonZero_success passes